# smtphotel

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  description  docker-compose.yml  pyproject.toml  smtphotel.md
.claude/agents/: api-reviewer.md  mobile-ux.md  success-detector.md  test-runner.md
.claude/skills/alembic/: SKILL.md
.claude/skills/fastapi-dev/: SKILL.md
.claude/skills/jwt-auth/: SKILL.md
.claude/skills/react-mobile/: SKILL.md
src/smtphotel/: __init__.py  config.py  main.py
src/smtphotel/api/: routes.py  schemas.py
src/smtphotel/smtp/: __init__.py  server.py
src/smtphotel/storage/: database.py  models.py
src/smtphotel/tasks/: __init__.py  pruning.py
src/smtphotel/web/static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_smtp.py  test_storage.py  test_tasks.py
